kubeconf/00_init/rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homates
  name: rabbit  #nome deployment
spec:
  replicas: 1 #repliche dell'api-gateway in caso di rottura
  selector:
    matchLabels:
      app: rabbit
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
        - name: rabbit #pod nel deployment
          image: rabbitmq:management
          imagePullPolicy: Always
          ports:
            - containerPort: 5672
            - containerPort: 15672 #porta in cui esce il pod ossia il container
          resources:
            requests:
              cpu: "200m"
              memory: "250Mi"
            limits:
              cpu: "300m"
              memory: "300Mi"
---
# service
apiVersion: v1
kind: Service
metadata:
  namespace: homates
  name: rabbit
spec:
  clusterIP: None
  selector:
    app: rabbit
  ports:
    - name : first
      port: 5672
      targetPort: 5672
    - name: second
      port: 15672
      targetPort: 15672
  type: ClusterIP
